Serving dummy data to front end using ng serve!

--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "@angular/router": "~12.1.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "install": "^0.13.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.15",
+    "nodemon": "^2.0.7",
     "npm": "^7.17.0",
+    "rrweb": "^0.9.14",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -40,8 +45,11 @@
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.1.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.7.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
