--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "npm": "^7.17.0",
     "rrweb": "^0.9.14",
     "rxjs": "~6.6.0",
+    "server": "^1.0.34",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
