--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-handlebars": "^5.3.4",
     "install": "^0.13.0",
     "moment": "^2.29.1",
+    "mongodb": "^4.1.3",
     "mongoose": "^5.13.10",
     "npm": "^7.24.2",
     "rrweb": "^0.9.14",
