--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@angular/platform-browser": "^12.1.5",
     "@angular/platform-browser-dynamic": "^12.1.5",
     "@angular/router": "^12.1.5",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^4.6.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
