Now displaying distant proximity info

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules
 .env
 src/app/pages/wildlife-advice-page/advice-questions/find-postcode/os-api-env.ts
+src/app/pages/wildlife-advice-page/advice-response/near-you-component/proximity-env.ts
