--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.29.1",
     "mongodb": "^4.1.3",
     "mongoose": "^5.13.10",
+    "nodemailer": "^6.7.2",
     "npm": "^7.24.2",
     "rrweb": "^0.9.14",
     "rxjs": "~6.6.0",
