--- a/.github/workflows/main_rewildmygarden.yml
+++ b/.github/workflows/main_rewildmygarden.yml
@@ -1,96 +1,96 @@
-# # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# # More GitHub Actions for Azure: https://github.com/Azure/actions
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
 
-# name: Build and deploy Node.js app to Azure Web App - RewildMyGarden
-
-# on:
-#   push:
-#     branches:
-#       - main
-#   workflow_dispatch:
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - uses: actions/checkout@v2
-
-#       - name: Set up Node.js version
-#         uses: actions/setup-node@v1
-#         with:
-#           node-version: '14.x'
-
-#       - name: npm install, build, and test
-#         run: |
-#           npm install
-#         # npm run build --prod
-#         # working-directory: .
-
-#       - name: Upload artifact for deployment job
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: deploy_dist
-#           path: .
-
-#   deploy:
-#     runs-on: ubuntu-latest
-#     needs: build
-#     environment:
-#       name: 'Production'
-#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-#     steps:
-#       - name: Download artifact from build job
-#         uses: actions/download-artifact@v2
-#         with:
-#           name: deploy_dist
-
-#       - name: 'Deploy to Azure Web App'
-#         id: deploy-to-webapp
-#         uses: azure/webapps-deploy@v2
-#         with:
-#           app-name: 'RewildMyGarden'
-#           slot-name: 'Production'
-#           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C3B4A0EF11D49E78175D34AD35A5363 }}
-#           package: .
-#           # package: dist/Rewild-My-Garden
-
-
-name: Build and deploy Node.js app to Azure Web App - nestjs
+name: Build and deploy Node.js app to Azure Web App - RewildMyGarden
 
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-      
+
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Node.js version
-      uses: actions/setup-node@v1
-      with:
-        node-version: '14.x'
+      - name: Set up Node.js version
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.x'
 
-    - name: npm install, build, and test
-      run: |
-        npm install
-#       npm run build --if-present
-#       npm run test --if-present
-        
-    - name: 'Deploy to Azure Web App'
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
+      - name: npm install, build, and test
+        run: |
+          npm install
+        # npm run build --prod
+        # working-directory: .
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: deploy_dist
+          path: .
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v2
+        with:
+          name: deploy_dist
+
+      - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
           app-name: 'RewildMyGarden'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C3B4A0EF11D49E78175D34AD35A5363 }}
-        package: .
+          package: .
+          # package: dist/Rewild-My-Garden
+
+
+# name: Build and deploy Node.js app to Azure Web App - nestjs
+
+# on:
+#   push:
+#     branches:
+#       - master
+#   workflow_dispatch:
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     environment:
+#       name: 'production'
+#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      
+#     steps:
+#     - uses: actions/checkout@v2
+
+#     - name: Set up Node.js version
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: '14.x'
+
+#     - name: npm install, build, and test
+#       run: |
+#         npm install
+# #       npm run build --if-present
+# #       npm run test --if-present
+        
+#     - name: 'Deploy to Azure Web App'
+#       id: deploy-to-webapp
+#       uses: azure/webapps-deploy@v2
+#       with:
+#           app-name: 'RewildMyGarden'
+#           slot-name: 'Production'
+#           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C3B4A0EF11D49E78175D34AD35A5363 }}
+#         package: .
