--- a/.github/workflows/main_rewildmygarden.yml
+++ b/.github/workflows/main_rewildmygarden.yml
@@ -27,9 +27,9 @@ jobs:
         # npm run build --prod
         # working-directory: .
 
-      - name: Zip artifact for deployment
-        run: 
-          zip release.zip ./* -r
+      # - name: Zip artifact for deployment
+      #   run: 
+      #     zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -50,8 +50,8 @@ jobs:
         with:
           name: deploy_dist
 
-      - name: unzip artifact for deployment
-        run: unzip release.zip
+      # - name: unzip artifact for deployment
+      #   run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
